--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chatbot "Por Def" IA</title>
    <!--<link rel="stylesheet" href="style.css"> --> 
   
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
   
     <link rel="icon" href="https://1.bp.blogspot.com/-2iRg97PDe2s/WTSj0l1Xi7I/AAAAAAAAAQA/eqUsQOF5Pnkmu20gy_ZJIQQPG7JlkUTSACLcB/s1600/UCC.png" type="image/x-icon"> <!-- Aparece el icono o la imagen en la pestaña del navegador -->
 </head>
@@ -76,7 +76,7 @@
 
 
 
-<script src="js/funcionalidad_pag.js"></script>
+<script src="script.js"></script>
 
 
 
