--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#" onclick="crearNuevaConversacion()">📝 Crear Nueva Conversación</a>
           <a href="#" onclick="mostrarHistorialConversaciones()">🕒 Historial de Conversaciones</a>
           <a href="#" id="Perfil">👤 Perfil</a>
-          <a href="javascript:history.go(-1)" id="Cierre_sesion">🔒 Cerrar Sesión</a>
+          <a href="https://breynersmartinez.github.io/login_chatbot.github.io/">🔒 Cerrar Sesión</a>
        
             <label for="themeSwitch">Tema:</label>
             <label class="theme-switch">
@@ -45,7 +45,7 @@
             <!-- lim-->
             <div class="message bot-message">
             <div class="icon-container">
-                <img src="https://th.bing.com/th/id/OIG3.PlfDuCfBUTn_x3x.Z7ty?pid=ImgGn"  alt="Icono" class="icon">
+                <img src="https://img.freepik.com/free-vector/cute-robot-operating-laptop-cartoon-icon-illustration-science-technology-icon-concept-isolated-flat-cartoon-style_138676-1776.jpg?size=338&ext=jpg"  alt="Icono" class="icon">
             </div>
             <div  class="message bot-message">Hola, soy "Por Def" tu asistente jurídico. ¿En qué puedo asesorarte jurídicamente?</div>
         </div>
@@ -54,7 +54,7 @@
             <div class="message bot-message">
                 <!--Icono al lado de las borbujas de chat-->
                 <div class="icon-container">
-                    <img src="https://th.bing.com/th/id/OIG3.PlfDuCfBUTn_x3x.Z7ty?pid=ImgGn"  alt="Icono" class="icon">
+                    <img src="https://img.freepik.com/free-vector/cute-robot-operating-laptop-cartoon-icon-illustration-science-technology-icon-concept-isolated-flat-cartoon-style_138676-1776.jpg?size=338&ext=jpg"  alt="Icono" class="icon">
                 </div>
                 Como inteligencia Artificial puedo asesorarte con casos no complejos, en el documento te dejo los casos en los que puedo ayudarte: 
                 <button id="siguienteBtn">">Abrir Documento </button>
