--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot "Por Def" IA</title>
+    <title>IA JURIDICA</title>
    <!--<link rel="stylesheet" href="style.css"> --> 
   
     <link rel="stylesheet" href="style.css">
@@ -35,7 +35,7 @@
     
     <!--Letraas con imagen de fondo aplicada-->
     <div class="Texto">
-        <h1 class="Texto">"Por Def" IA 🤖</h1>
+        <h1 class="Texto">IA JURIDICA 🤖</h1>
     </div>
 <!--recuadro que contiene los chats 
 -->
@@ -47,7 +47,7 @@
             <div class="icon-container">
                 <img src="https://img.freepik.com/free-vector/cute-robot-operating-laptop-cartoon-icon-illustration-science-technology-icon-concept-isolated-flat-cartoon-style_138676-1776.jpg?size=338&ext=jpg"  alt="Icono" class="icon">
             </div>
-            <div  class="message bot-message">Hola, soy "Por Def" tu asistente jurídico. ¿En qué puedo asesorarte jurídicamente?</div>
+            <div  class="message bot-message">Hola, soy  tu asistente jurídico. ¿En qué puedo asesorarte jurídicamente?</div>
         </div>
             <!--lim-->
 
