Se hizo cambios en la parte estetica del proyecto

--- a/indexLogin.html
+++ b/indexLogin.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Por Def" IA</title>
-    <link rel="icon" href="https://1.bp.blogspot.com/-2iRg97PDe2s/WTSj0l1Xi7I/AAAAAAAAAQA/eqUsQOF5Pnkmu20gy_ZJIQQPG7JlkUTSACLcB/s1600/UCC.png" type="image/x-icon">
+    <title>𝘽𝙍𝙀𝙄𝙉𝙇𝙊𝙂𝙄𝘾 ⚡</title>
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" type="image/x-icon">
     <link rel="stylesheet" href="Css/styleLogin.css">
 </head>
 <body>
     <div class="container_log">
         <!-- Título de la IA -->
-        <h1 class="Texto">"Por Def"   IA</h1>
+        <h1 class="Texto">𝘽𝙍𝙀𝙄𝙉𝙇𝙊𝙂𝙄𝘾 ⚡</h1>
         
         <!-- Contenedor de imágenes -->
         <div class="images-container_log">
-            <img onclick="UCC()"  src="https://4.bp.blogspot.com/-gCsu1M2Q5oM/VCQ2sd0wOgI/AAAAAAAAANE/wlq8vohJmv0/s1600/Nuevo_Logo_UCC.png" alt="">
+            <img onclick="UCC()"  src="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" alt="">
         </div>
 
         <!-- Formulario de inicio de sesión -->
