--- a/indexNewUser.html
+++ b/indexNewUser.html
@@ -17,7 +17,7 @@
       </style>
 
       <title>Registrar Usuario</title>
-      <link rel="icon" href="https://1.bp.blogspot.com/-2iRg97PDe2s/WTSj0l1Xi7I/AAAAAAAAAQA/eqUsQOF5Pnkmu20gy_ZJIQQPG7JlkUTSACLcB/s1600/UCC.png" type="image/x-icon">
+      <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" type="image/x-icon">
       <link rel="stylesheet" href="Css/styleNewUser.css">
   </head>
 
