--- a/indexUser.html
+++ b/indexUser.html
@@ -12,7 +12,7 @@
    
 
     <link rel="stylesheet" href="Css/styleUser.css">
-    <link rel="icon" href="https://1.bp.blogspot.com/-2iRg97PDe2s/WTSj0l1Xi7I/AAAAAAAAAQA/eqUsQOF5Pnkmu20gy_ZJIQQPG7JlkUTSACLcB/s1600/UCC.png" type="image/x-icon"> <!-- Aparece el icono o la imagen en la pestaña del navegador -->
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" type="image/x-icon"> <!-- Aparece el icono o la imagen en la pestaña del navegador -->
 </head>
 <body>
     <div class="container">
