Se añadieron modulos  node

--- a/BotBreinlogic-codespace-special-doodle-jjj95pj697pxc4qj/index.html
+++ b/BotBreinlogic-codespace-special-doodle-jjj95pj697pxc4qj/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
