Se realizo un cambio en la descripcion de procesos de la ia

--- a/indexChatBot.html
+++ b/indexChatBot.html
@@ -57,7 +57,7 @@
             <div class="icon-container">
                 <img src="https://img.freepik.com/free-vector/cute-robot-operating-laptop-cartoon-icon-illustration-science-technology-icon-concept-isolated-flat-cartoon-style_138676-1776.jpg?size=338&ext=jpg"  alt="Icono" class="icon">
             </div>
-            <div  class="message bot-message"> Hola, soy Una IA  que combina lógica e inteligencia artificial para analizar datos,  ofrecer respuestas precisas en tiempo real. 🚀💡 <!--<button id="siguienteBtn">">Abrir Documento </button>--></div>
+            <div  class="message bot-message"> Hola, soy Una IA  que combina lógica e inteligencia artificial para analizar datos, y documentos PDF.🚀💡 <!--<button id="siguienteBtn">">Abrir Documento </button>--></div>
             
             
         </div>
