Se crearon los fetch para login y sigin

--- a/indexLogin.html
+++ b/indexLogin.html
@@ -39,7 +39,7 @@
     <!-- Botón que al presionar nos lleva al chatbot -->
   
 
-    <script src="JS/scriptLogin.js"></script>
+    <script src="JS/Login/scriptLogin.js"></script>
 
     <footer  style="width:100%; margin-left: 0px;"  >
 
