--- a/indexNewUser.html
+++ b/indexNewUser.html
@@ -43,6 +43,6 @@
     </div>
     
     <script src="app.js"></script>
-    <script src="JS/scriptNewUser.js"></script>
+    <script src="JS/SigIn/scriptNewUser.js"></script>
   </body>
 </html>
