Se hicieron ajustes en el bot para formatear respuestas

--- a/indexChatBot.html
+++ b/indexChatBot.html
@@ -13,7 +13,13 @@
     <link rel="stylesheet" href="Css/Bot/HistorialBot.css">
     <link rel="stylesheet" href="Css/Bot/MenuBot.css">
     <link rel="stylesheet" href="Css/Bot/Settings.css">
-  
+
+    <link rel="stylesheet" href="Css/Bot/MessageBot.css">
+
+
+
+
+
     <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" type="image/x-icon"> <!-- Aparece el icono o la imagen en la pestaña del navegador -->
 </head>
 <body>
@@ -59,10 +65,7 @@
 -->
     <div class="chat-container">
         <div class="chat-window" id="chatWindow">
-
-            <!-- lim-->
-            <div class="message bot-message">
-                
+  
             <div class="icon-container">
                 
                 <img src="https://img.freepik.com/free-vector/cute-robot-operating-laptop-cartoon-icon-illustration-science-technology-icon-concept-isolated-flat-cartoon-style_138676-1776.jpg?size=338&ext=jpg"  alt="Icono" class="icon">
