--- a/index.html
+++ b/index.html
@@ -1,102 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>𝘽𝙍𝙀𝙄𝙉𝙇𝙊𝙂𝙄𝘾</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;400;600;700&display=swap">
-    <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/006/240/761/small/initial-letter-b-tech-logo-design-template-element-eps10-vector.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="Css/style.css">
-</head>
-<body>
-    <!-- Header -->
-    <header>
-        <div class="logo">
-            <img src="https://1.bp.blogspot.com/-2iRg97PDe2s/WTSj0l1Xi7I/AAAAAAAAAQA/eqUsQOF5Pnkmu20gy_ZJIQQPG7JlkUTSACLcB/s1600/UCC.png" alt="Logo UCC">
-        </div>
-        <nav class="menu">
-            <ul class="menu-list">
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#about">Acerca de Nosotros</a></li>
-                <li><a href="#contact">Contacto</a></li>
-                <li><a href="#" class="btn-login" onclick="inicio_sesion_ucc()">Iniciar Sesión</a></li>
-            </ul>
-            <button class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </button>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-content">
-            <h1>Asesoramiento Jurídico Profesional</h1>
-            <p>"El apoyo que necesitas en tus procesos jurídicos. Somos la Universidad Cooperativa de Colombia, brindando soluciones reales a conflictos legales de manera gratuita."</p>
-            <a href="#contact" class="cta-button">Contáctanos</a>
-        </div>
-        <div class="hero-image">
-            <img src="https://th.bing.com/th/id/R.dee8c068185164ec7bdfdd6c2d467603?rik=0Ib8%2fhG%2bN3O2RQ&pid=ImgRaw&r=0" alt="Legal Assistance">
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section class="services" id="services">
-        <h2>Nuestros Servicios</h2>
-        <div class="service-cards">
-            <div class="card">
-                <i class="fas fa-balance-scale"></i>
-                <h3>Asesoría Legal</h3>
-                <p>Brindamos orientación legal en diversas áreas del derecho.</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-users"></i>
-                <h3>Mediación</h3>
-                <p>Facilitamos la resolución de conflictos de manera pacífica.</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-book"></i>
-                <h3>Capacitaciones</h3>
-                <p>Ofrecemos talleres y cursos sobre temas jurídicos.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="about" id="about">
-        <h2>Acerca de Nosotros</h2>
-        <div class="about-content">
-            <p>Somos un equipo de profesionales comprometidos con la justicia y el bienestar de la comunidad. Nuestra misión es brindar asesoramiento jurídico accesible y de calidad.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.8332865711604!2d-76.55374192493363!3d3.390850996583784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30a8832212050d%3A0xb7281223f25ff99b!2sUCC%20Cali!5e0!3m2!1ses-419!2sco!4v1725750216407!5m2!1ses-419!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </section>
-    ho
-
-    <!-- Contact Section -->
-    <section class="contact" id="contact">
-        <h2>Contacto</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Nombre" required>
-            <input type="email" placeholder="Correo Electrónico" required>
-            <textarea placeholder="Mensaje" required></textarea>
-            <button type="submit">Enviar Mensaje</button>
-        </form>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Asesoramiento Jurídico UCC - Todos los derechos reservados.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="JS/script.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/StellarCodeLogo.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StellarPark</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
